--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Cloudcomputing</h1>
+        <h1>IS429 Cloudcomputing</h1>
         <p>For Cloud Computing Class</p>
+        <p>Lots of work!</p>
         <p class="view"><a href="https://github.com/mxchua/CloudComputing">View the Project on GitHub <small>mxchua/CloudComputing</small></a></p>
         <ul>
           <li><a href="https://github.com/mxchua/CloudComputing/zipball/master">Download <strong>ZIP File</strong></a></li>
