--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!-- CHAT MARKUP -->
     <div class='example-chat l-demo-container'>
-      <header>Enter your email please</header>
+      <header>Name the first person that comes to your mind</header>
 
       <div class='example-chat-toolbar'>
         <label for='nameInput'>Username:</label>
@@ -28,10 +28,8 @@
 
       <footer>
         <input ng-model='msg' ng-keydown="addMessage($event)" type='text' id='messageInput'  placeholder='Type a message...'>
-      <a href="http://ugkkd0fe515a.geraldlimzy.koding.io/firstlistapp.html">Go to the next person</a>
-        
       </footer>
-      
+      <a href="http://geraldlim.github.io/IS429/">Go to the next person</a>
     </div>
 
     <script>
