--- a/index.html
+++ b/index.html
@@ -29,9 +29,8 @@
       <footer>
         <input ng-model='msg' ng-keydown="addMessage($event)" type='text' id='messageInput'  placeholder='Type a message...'>
       </footer>
-      
+        <a href="http://geraldlim.github.io/IS429/">Go to the next person</a>
     </div>
-    <div style="margin:inherit"></div><a href="http://geraldlim.github.io/IS429/">Go to the next person</a></div>
     <script>
       var myApp = angular.module("myApp", ["firebase"]);
 
