--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </ul>
 
       <footer>
-        <input ng-model='msg' ng-keydown="addMessage($event)" type='text' id='messageInput'  placeholder='Type a message...'>
+        <input ng-model='msg' ng-keydown="addMessage($event)" type='text' id='messageInput'  placeholder='Name the first person that comes to your mind'>
       </footer>
         <a href="http://geraldlim.github.io/IS429/">Go to the next person</a>
     </div>
